samples/_failures_safe/1761434957_68e620_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_266f067e.c: In function ‘main’:
./samples/SAFE/__tmp_266f067e.c:135:9: error: expected declaration or statement at end of input
  135 |         char timestamp[32] = {0};
      |         ^~~~
./samples/SAFE/__tmp_266f067e.c:135:9: error: expected declaration or statement at end of input
